--- a/src/web/admins/templates/admins/season_episode_media_form.html
+++ b/src/web/admins/templates/admins/season_episode_media_form.html
@@ -107,7 +107,7 @@
 
         const getSignedUrl = async () => {
             const params = {
-                Bucket: 'dramaboxbucket/{{ episode.season.series }}/{{ episode.season }}/input', // Replace with your bucket name
+                Bucket: 'dramaboxbucket/{{ episode.season.series }}/{{ episode.season }}', // Replace with your bucket name
                 Key: file.name,              // The file name you want to save as
                 ContentType: file.type,      // The file type
                 Expires: 60                   // URL expiration time in seconds
